--- a/src/daybook-date.html
+++ b/src/daybook-date.html
@@ -1,5 +1,5 @@
-cls{% set title = 'table' %}
-{% set filename = 'table.html' %}
+cls{% set title = 'daybook' %}
+{% set filename = 'daybook-date.html' %}
 
 {% extends 'src/layouts/table.html' %}
 
@@ -9,7 +9,7 @@ cls{% set title = 'table' %}
 
 {% block content %}
 <div class="page-heading">
-    <h3>table</h3>
+    <h3>daybook</h3>
 </div> 
 <div class="page-content"> 
     <section class="row">
